# buildyourownlisp

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  eval.c  eval.h  main.c  parser.c  parser.h  parsing.c  parsing.h
test/: CMakeLists.txt  eval_test.c  parser_test.c  test_parser.c
